implementazione completa + view

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -103,7 +103,7 @@
                             ed interagire con loro per farti consigliare i
                             libri più adatti a te.
                         </p>
-                        <a href="/visualizza-esperti/" class="btn btn-lg active red-btn" role="button" aria-pressed="true">Esperti</a>
+                        <a href="/comunicazione-esperto/lista-esperti" class="btn btn-lg active red-btn" role="button" aria-pressed="true">Esperti</a>
                     </div>
                 </div>
             </div>
