--- a/src/main/resources/templates/registrazione/registrazione_lettore.html
+++ b/src/main/resources/templates/registrazione/registrazione_lettore.html
@@ -4,6 +4,7 @@
 <head>
     <link rel="stylesheet" type="text/css" href="../../style/registrazione.css">
     <link rel="stylesheet" type="text/css" href="../../style/style.css">
+    <script src="../../js/registrazione/regex.js"></script>
     <meta charset="UTF-8">
     <title>Registrazione Lettore</title>
 </head>
@@ -12,11 +13,11 @@
 <div layout:fragment="pagina" class="container">
 
     <div class="text-center">
-        <img class="logo-index" th:src="@{~/image/logo/logo_BiblioNet.png}" alt="Logo BiblioNet">
+        <a th:href="@{/}"><img class="logo-index" th:src="@{~/image/logo/logo_BiblioNet.png}" alt="Logo BiblioNet"></a>
     </div>
 
     <div class="row">
-        <form method="post" th:action="@{/registrazione/lettore}" class="form-registrazione form-horizontal">
+        <form method="post" name="form_lettore" th:action="@{/registrazione/lettore}" th:onsubmit="return validateLettore()" class="form-registrazione form-horizontal">
 
             <div class="column sx">
 
