pagina visualizzazione singola biblioteca

--- a/src/main/resources/static/style/biblioteca.css
+++ b/src/main/resources/static/style/biblioteca.css
@@ -21,3 +21,48 @@
 .col {
     margin-top: 2%;
 }
+
+.title-box {
+    height: 180px;
+    background-color: #073763;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 10px;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+
+.name {
+    text-align: center;
+    width: 40%;
+    margin: 0 auto;
+    color: white;
+    background-color: #b20909;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+
+.card {
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    height: 300px;
+}
+
+.prenota-libri {
+    margin-top: 5%;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center
+}
+
+a:hover {
+    color: #b20909;
+}
+
+::-webkit-scrollbar {
+    width: 0px;
+    background: transparent;
+}
+
+* {
+    -ms-overflow-style: none !important;
+}
