--- a/src/main/resources/templates/autenticazione/login.html
+++ b/src/main/resources/templates/autenticazione/login.html
@@ -12,6 +12,11 @@
     <form th:action="@{/autenticazione/login}" method="post" class="form-signin">
 
         <h3 class="form-signin-heading">Login Utente</h3>
+        <div th:if="${error}">
+            <h6 class="form-signin-heading" style="color: #ff0000">
+                Errore! Credenziali errate.
+            </h6>
+        </div>
         <input type="email" id="inputEmail" class="form-control" name="email" placeholder="esempio@esempio.com" required autofocus>
         <input type="password" id="inputPassword" class="form-control" name="password" placeholder="Password" required>
         <button class="btn btn-main " type="submit">Accedi</button>
