--- a/src/main/resources/templates/biblioteca/inserimento-nuovo-libro-prenotabile.html
+++ b/src/main/resources/templates/biblioteca/inserimento-nuovo-libro-prenotabile.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Inserimento nuovo libro</title>
-    <link rel="stylesheet" th:href="@{~/style/biblioteca.css}" />
+    <link rel="stylesheet" th:href="@{~/style/libro.css}" />
 </head>
 <body>
 <div layout:fragment="contenuto-pagina" class="container">
