aggiunta classe per il testing delle regex
Aggiunte le regex da testare e il testing relativo

--- a/src/main/resources/templates/area-utente/modifica-dati-esperto.html
+++ b/src/main/resources/templates/area-utente/modifica-dati-esperto.html
@@ -67,7 +67,7 @@
                                             <p class="text-primary m-0 font-weight-bold">Lavora in</p>
                                         </div>
                                         <div class="card-body">
-                                            <div class="form-group"><label><strong>Email Biblioteca</strong></label><input class="form-control" type="text" placeholder="email@biblioteca.com" name="email_biblioteca" th:value="${esperto.getBiblioteca.getEmail()}"></div>
+                                            <div class="form-group"><label><strong>Email Biblioteca</strong></label><input class="form-control" type="text" placeholder="email@biblioteca.com" name="email_biblioteca" th:value="${esperto.getBiblioteca().getEmail()}"></div>
                                         </div>
                                     </div>
                                     <div class="card shadow">
